fix: picture wrap

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import '~antd/dist/antd.css';
 .App {
   text-align: center;
-  height:100vh;
+  height:100%;
+  width:100%
 }
 
 .App-logo {
