--- a/src/components/index.css
+++ b/src/components/index.css
@@ -47,14 +47,17 @@
     color:cornflowerblue
 }
 .content-picture{
-    min-width: 660px;
+    width: 90%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;   
+    flex-wrap:wrap
 }
 .content-picture .ant-image-img{
-  max-height: 400px;
+  max-height: 300px;
+  max-width: 300px;
+  margin-top: 10px;
 }
 .content-list{
     min-height: 100vh;
